fix bug 193477 [URL: colon ":" in URI is escaped  in request (not scheme or port delimiter)] no longer escape the colon when it is part of the filename in urls, but force it's escape in links when building dir/index listings, r=bbaetz@acm.org, sr=darin@netscape.com