xpcom/io/nsEscape.h
@@ -117,7 +117,8 @@ enum EscapeMask {
   esc_Forced         = PR_BIT(10), /* forces escaping of existing escape sequences */
   esc_OnlyASCII      = PR_BIT(11), /* causes non-ascii octets to be skipped */
   esc_OnlyNonASCII   = PR_BIT(12), /* causes ascii octets to be skipped */
-  esc_AlwaysCopy     = PR_BIT(13)  /* copy input to result buf even if escaping is unnecessary */
+  esc_AlwaysCopy     = PR_BIT(13), /* copy input to result buf even if escaping is unnecessary */
+  esc_Colon          = PR_BIT(14)  /* force escape of colon */
 };
 
 /**
